--- a/Documents/report/ref.bib
+++ b/Documents/report/ref.bib
@@ -428,7 +428,7 @@
 	month = jun,
 	year = {2014},
 	note = {arXiv: 1406.2989},
-	keywords = {Computer Science - Machine Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning},
+	keywords = {Computer Science - Neural and Evolutionary Computing, Computer Science - Machine Learning, Statistics - Machine Learning},
 	file = {Raiko et al. - 2014 - Techniques for Learning Binary Stochastic Feedforw.pdf:/Users/t/Zotero/storage/V838ID8Q/Raiko et al. - 2014 - Techniques for Learning Binary Stochastic Feedforw.pdf:application/pdf}
 }
 
@@ -460,4 +460,34 @@
 	year = {2014},
 	pages = {1929--1958},
 	file = {Full Text PDF:/Users/t/Zotero/storage/ADLS4SUC/Srivastava et al. - 2014 - Dropout A Simple Way to Prevent Neural Networks f.pdf:application/pdf;Snapshot:/Users/t/Zotero/storage/AJPRFSKT/srivastava14a.html:text/html;Srivastava et al. - Dropout A Simple Way to Prevent Neural Networks f.pdf:/Users/t/Zotero/storage/ZW85FXMH/Srivastava et al. - Dropout A Simple Way to Prevent Neural Networks f.pdf:application/pdf}
+}
+
+@article{lamb_professor_2016,
+	title = {Professor {Forcing}: {A} {New} {Algorithm} for {Training} {Recurrent} {Networks}},
+	shorttitle = {Professor {Forcing}},
+	url = {http://arxiv.org/abs/1610.09038},
+	abstract = {The Teacher Forcing algorithm trains recurrent networks by supplying observed sequence values as inputs during training and using the network's own one-step-ahead predictions to do multi-step sampling. We introduce the Professor Forcing algorithm, which uses adversarial domain adaptation to encourage the dynamics of the recurrent network to be the same when training the network and when sampling from the network over multiple time steps. We apply Professor Forcing to language modeling, vocal synthesis on raw waveforms, handwriting generation, and image generation. Empirically we find that Professor Forcing acts as a regularizer, improving test likelihood on character level Penn Treebank and sequential MNIST. We also find that the model qualitatively improves samples, especially when sampling for a large number of time steps. This is supported by human evaluation of sample quality. Trade-offs between Professor Forcing and Scheduled Sampling are discussed. We produce T-SNEs showing that Professor Forcing successfully makes the dynamics of the network during training and sampling more similar.},
+	urldate = {2019-04-12},
+	journal = {arXiv:1610.09038 [cs, stat]},
+	author = {Lamb, Alex and Goyal, Anirudh and Zhang, Ying and Zhang, Saizheng and Courville, Aaron and Bengio, Yoshua},
+	month = oct,
+	year = {2016},
+	note = {arXiv: 1610.09038},
+	keywords = {Computer Science - Machine Learning, Statistics - Machine Learning},
+	file = {arXiv\:1610.09038 PDF:/Users/t/Zotero/storage/MYXRB8YH/Lamb et al. - 2016 - Professor Forcing A New Algorithm for Training Re.pdf:application/pdf;arXiv.org Snapshot:/Users/t/Zotero/storage/22FQNIVB/1610.html:text/html}
+}
+
+@article{williams_learning_1989,
+	title = {A {Learning} {Algorithm} for {Continually} {Running} {Fully} {Recurrent} {Neural} {Networks}},
+	volume = {1},
+	issn = {0899-7667},
+	doi = {10.1162/neco.1989.1.2.270},
+	abstract = {The exact form of a gradient-following learning algorithm for completely recurrent networks running in continually sampled time is derived and used as the basis for practical algorithms for temporal supervised learning tasks. These algorithms have (1) the advantage that they do not require a precisely defined training interval, operating while the network runs; and (2) the disadvantage that they require nonlocal communication in the network being trained and are computationally expensive. These algorithms allow networks having recurrent connections to learn complex tasks that require the retention of information over time periods having either fixed or indefinite length.},
+	number = {2},
+	journal = {Neural Computation},
+	author = {Williams, R. J. and Zipser, D.},
+	month = jun,
+	year = {1989},
+	pages = {270--280},
+	file = {IEEE Xplore Abstract Record:/Users/t/Zotero/storage/NA6ZHGG6/6795228.html:text/html}
 }
