add support for saving results to csv and adding codebase backup for quicker iteration

--- a/code/vad_evaluate.ipynb
+++ b/code/vad_evaluate.ipynb
@@ -426,9 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bad models/20190412 22-34-59 ['results', 'charts']\n"
+     ]
+    }
+   ],
    "source": [
     "import shutil\n",
     "import os\n",
